--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <title>Document</title>
     <link rel="shortcut icon" href="nobel_dij.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="stilus.css">
+
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<link rel="stylesheet" href="stilus.css">
 </head>
 <body>
    
     
 <div id="menu"> </div>
-<div id="keret"> </div>
+<div class="row" id="keret"> </div>
 <!-- The Modal -->
 <div class="modal" id="myModal">
     <div class="modal-dialog">
