--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
   
         <!-- Modal body -->
-        <div class="modal-header" id="modeltorzs">
+       
+        <div  class="modal-body" id="modaltorzs">
           Modal body..
         </div>
   
