--- a/nevkeres.html
+++ b/nevkeres.html
@@ -1,33 +1,68 @@
+Nobel-díjak
+Anikó Várbíróné Nahaji
+•
+ápr. 14. (Szerkesztve: 11:40)
+100 pont
+https://api.nobelprize.org/v1/prize.json
+nobel.jpg
+Kép
+alap.js
+JavaScript
+evkeres.html
+HTML
+evkeres.js
+JavaScript
+index.html
+HTML
+menu.js
+JavaScript
+nevkeres.html
+HTML
+nevkeres.js
+JavaScript
+stilus.css
+CSS
+Kurzusmegjegyzések
+Saját feladat
+Leadva
+GitHub - mia780/web.nobel
+https://github.com/mia780/web.nobel.git
+Privát megjegyzések
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="nobel_dij.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="nobel.jpg" type="image/x-icon">
+    
+ <!-- Latest compiled and minified CSS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+ <!-- Latest compiled JavaScript -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+ <link rel="stylesheet" href="stilus.css">
 
 
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-   
     
-<div id="menu"> </div>
-<div class="baligazit">
-    <p>Adj meg egy nevet</p> 
-    <input type="text" id="beEv">
-    <button onclick="keresNev()">Keresés</button>
-    <div id="kiadat"></div>
+    <div id="menu"></div>
 
-</div>
+    <div class="balIgazit">
+        <p>Adj meg egy nevet:</p>
+        <input type="text" id="beNev">
+        <button onclick="keresesNev()">Keresés</button>
+        <div id="tablazat"></div>
+    </div>
 
 
-<script src="menu.js"></script>
- <script src="nevkeres.js"></script>
 
+    <script src="menu.js"></script>
+    <script src="nevkeres.js"></script>
 </body>
 </html>
+
+
+
