--- a/nevkeres.html
+++ b/nevkeres.html
@@ -1,34 +1,3 @@
-Nobel-díjak
-Anikó Várbíróné Nahaji
-•
-ápr. 14. (Szerkesztve: 11:40)
-100 pont
-https://api.nobelprize.org/v1/prize.json
-nobel.jpg
-Kép
-alap.js
-JavaScript
-evkeres.html
-HTML
-evkeres.js
-JavaScript
-index.html
-HTML
-menu.js
-JavaScript
-nevkeres.html
-HTML
-nevkeres.js
-JavaScript
-stilus.css
-CSS
-Kurzusmegjegyzések
-Saját feladat
-Leadva
-GitHub - mia780/web.nobel
-https://github.com/mia780/web.nobel.git
-Privát megjegyzések
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,7 +21,7 @@ Privát megjegyzések
 
     <div class="balIgazit">
         <p>Adj meg egy nevet:</p>
-        <input type="text" id="beNev">
+        <select name="" id="beEv"></select>
         <button onclick="keresesNev()">Keresés</button>
         <div id="tablazat"></div>
     </div>
